--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <input type="text" v-model="name">
     <input type="text" v-model="dog.name">
   </div>
-  
+
+  <script src="./mvvm/vue.js"></script>
   <script>
     const vm = new Vue({
       el: '#app',
