--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
   <div id="app">
+    {{ name }}
     <h1>Name: {{ name }}</h1>
     <h1>Age: {{ age }}</h1>
     <h1>dog.name: {{ dog.name }}</h1>
-
+    <div>
+      <div>
+        <h1></h1>
+      </div>
+    </div>
     <div v-text="name"></div>
     <input type="text" v-model="name">
     <input type="text" v-model="dog.name">
   </div>
-
+  <script src="./mvvm/compiler.js"></script>
   <script src="./mvvm/vue.js"></script>
   <script>
     const vm = new Vue({
