Observer把data中的数据转换成getter/setter

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <input type="text" v-model="name">
     <input type="text" v-model="dog.name">
   </div>
+  <script src="./mvvm/observer.js"></script>
   <script src="./mvvm/compiler.js"></script>
   <script src="./mvvm/vue.js"></script>
   <script>
