--- a/05-发布订阅.html
+++ b/05-发布订阅.html
@@ -19,6 +19,7 @@
       // { 'click': [fn1, fn2, fn3], 'move': [fn1] }
       // {}
       // {'click': [fn]}
+      // 存储的是 事件名称：事件处理函数
       this.subs = {}
     }
     // 注册事件
