数据变化更新视图

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <input type="text" v-model="name">
     <input type="text" v-model="dog.name">
   </div>
+  <script src="./mvvm/dep.js"></script>
+  <!-- watcher里面使用了dep -->
+  <script src="./mvvm/watcher.js"></script>
   <script src="./mvvm/observer.js"></script>
   <script src="./mvvm/compiler.js"></script>
   <script src="./mvvm/vue.js"></script>
